--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,10 @@ project(LightUp)               # Create project "simple_example"
 set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard
 
 # Add main.cpp file of project root directory as source file
-set(SOURCE_FILES Main.cpp)
+file(GLOB source_files
+        "*.hpp"
+        "*.cpp"
+        )
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(LightUp ${SOURCE_FILES})
+add_executable(LightUp ${source_files})
